--- a/adventure-works.html
+++ b/adventure-works.html
@@ -28,7 +28,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\adventure-works-dashboard.png" alt="Adventure Works Dashboard"/></span>
+								<span class="image main"><img src="images\adventure-works-dashboard.PNG" alt="Adventure Works Dashboard"/></span>
 								<h2>1. Dataset Summary</h2>
                                     <p>Adventure Works Cycles, a global manufacturing company, with sales data from 2015 to 2017.</p>
                                 <h2>2. DIM & FACT tables</h2>
@@ -44,7 +44,7 @@
 										<li>Identify high-value customers and perform a deeper analysis of the customer file</li>
 									</ul>
 								<h2>5. Data Model</h2>
-								<img src="images\adventure-works-data-model.png" alt="Adventure Works- Data model" width="100%">
+								<img src="images\adventure-works-data-model.PNG" alt="Adventure Works- Data model" width="100%">
 
                                 <footer class="major">
 									<ul class="actions special">
