--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 								<ul class="features">
 									<li>
 										<a href="adventure-works.html">
-											<img class="imagefix" style="text-decoration: none;" src="images\adventure-works-dashboard.PNG" alt="Adventure Works - Sales & Customer Analysis" width="100%">
+											<img class="imagefix" style="text-decoration: none;" src="images\adventure-works-dashboard-cover.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 										</a>
 										<p>Adventure Works - Sales & Customer Analysis</p>
 									</li>
@@ -225,7 +225,7 @@
 							<ul class="features">
 								<li>
 									<a href="electric-store.html">
-										<img class="imagefix" style="text-decoration: none;" src="images\electric-store_sales_analysis.PNG" alt="Adventure Works - Sales & Customer Analysis" width="100%">
+										<img class="imagefix" style="text-decoration: none;" src="images\electric-store_sales_analysis.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 									</a>
 									<p>Electric store - Sales analysis</p>
 								</li>
