--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 										
 										<p>My background as a Salesforce Administration and Ecommerce Specialist in the BAYA Furniture & Decoration has given me a deep foundation in working with many systems in data collection, analysis, visualization, and coming up with insights and recommendations. 
 										</p>
-										<p>I’m self-study and enjoy working with the computer and numbers. At first, I used Excel and then learned more to use other tools like MySQL, Power BI, and Python to analyze data more effectively.
+										<p>I’m self-study and enjoy working with computers and numbers. At first, used Excel and then learned to use other tools like MySQL, Power BI, and Python to analyze data more effectively.
 										</p>
 										<ul>
 											<li>LinkedIn: <a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></li>
