--- a/financial-report.html
+++ b/financial-report.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>US Labor Statistics - What do wage & employment figures look like by industry?</title>
+		<title>Financial Report</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -20,8 +21,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>US Labor Statistics - What do wage & employment figures look like by industry?</h1>
-						<p>Skills: Exploratory data Analysis, data visualization, storytelling</p>
+						<h1>Financial Report</h1>
+						<p>Skills: ETL, data analysis, DAX, data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -29,22 +30,32 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\wage-employee-by-industry.png" alt="US Labor Statistics - What do wage & employment figures look like by industry?" /></span>
+								<span class="image main"><img src="images\financial-report.PNG" alt="Adventure Works Dashboard"/></span>
 								<h2>1. Dataset Summary</h2>
-                                    <p>US labor statistics by industry & state, from 2017 to 2020.</p>
-                                <h2>2. Dimensions & Measures</h2>
-                                    <ul>
-                                        <li>Dimensions: Year, Industry, State </li>
-                                        <li>Measures: Establishments, Employees, Avg Annual Wage</li>
-                                    </ul>
-								<h2>3. Tool: Excel</h2>
-                                <h2>4. Data fields</h2>
-                                    <ul>
-                                        <li>Columns: 6</li>
-                                        <li>Rows: 1,918</li>
-                                    </ul>
+                                    <p>This dataset included company information such as sales order, customers, regions, products, invoices, company expense... from 2015 to 2018.</p>
+                                <h2>2. DIM & FACT tables</h2>
+									<ul>
+										<li>DIM tables: Calendar, Products, Regions, Customers, Channels</li>
+										<li>FACT tables: Sales, Invoices, Income Statement Data</li>
+									</ul>
+                                <h2>3. Tool: Power BI</h2>
+								<h2>4. The brief</h2>
+								<p>Make the following reports to monitor the company's business.</p>
+									<ul>
+										<li>Income Statement</li>
+										<li>Balance Sheet</li>
+										<li>Cash Flow Statement</li>
+										<li>Financial Details</li>
+										<li>Revenue Insights</li>
+									</ul>
+								<h2>5. Data Model</h2>
+								<img src="images\financial-report-data-model.PNG" alt="Financial Report- Data model" width="100%">
 
-                                    <center><img src="images\US Labor Statistics.png" alt="US Labor Statistics"></center>
+                                <footer class="major">
+									<ul class="actions special">
+										<li><a href="https://bit.ly/financial-report-powerbi" class="button" target="_blank">View dashboard</a></li>
+									</ul>
+								</footer>
                             
                                     <p class="backtohomepage">
                                         <a href="https://giangpham1410.github.io/"> BACK TO HOMEPAGE</a>
