--- a/fuzzy-factory.html
+++ b/fuzzy-factory.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -64,27 +65,27 @@
                 
 
 				<!-- Footer -->
-                <footer id="footer">
-                    <section>
-                        <h2>Contact Me</h2>
-                        <dl class="alt">
-                            <dt>Email</dt>
-                            <dd><a href="#">giang.pnt1410@gmail.com</a></dd>
-                            <dt>LinkedIn</dt>
-                            <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
-                            <dt>GitHub</dt>
-                            <dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
-                            <dt>Address</dt>
-                            <dd>Ho Chi Minh city, Vietnam</dd>
-                        </dl>
-                        <ul class="icons">
+				<footer id="footer">
+					<section>
+						<h2>Contact Me</h2>
+						<dl class="alt">
+							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
+							<dd><a href="#">giang.pnt1410@gmail.com</a></dd>
+							<dt><i class="fa-brands fa-linkedin"></i></dt>
+							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
+							<dt><i class="fa-brands fa-github"></i></dt>
+							<dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
+							<dt><i class="fa-sharp fa-solid fa-location-dot"></i></dt>
+							<dd>Ho Chi Minh city, Vietnam</dd>
+						</dl>
+						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 							<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
 						</ul>
-                    </section>
-                    <p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
-                </footer>
+					</section>
+					<p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
+				</footer>
 
 			</div>
 
