--- a/remote-working-survey.html
+++ b/remote-working-survey.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -95,13 +96,13 @@
                     <section>
                         <h2>Contact Me</h2>
                         <dl class="alt">
-                            <dt>Email</dt>
+                            <dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
                             <dd><a href="#">giang.pnt1410@gmail.com</a></dd>
-                            <dt>LinkedIn</dt>
+                            <dt><i class="fa-brands fa-linkedin"></i></dt>
                             <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
-                            <dt>GitHub</dt>
+                            <dt><i class="fa-brands fa-github"></i></dt>
                             <dd><a href="https://giangpham1410.github.io/" target="_blank">giangpham1410.github.io</a></dd>
-                            <dt>Address</dt>
+                            <dt><i class="fa-sharp fa-solid fa-location-dot"></i></dt>
                             <dd>Ho Chi Minh city, Vietnam</dd>
                         </dl>
                         <ul class="icons">
