--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<h1>Giang Pham's Portfolio</h1>
 					</header>
 				-->
-					<img src="images/giang-banner-1.png" alt="">
+					<img src="images/giang-banner.png" alt="Banner">
 
 				<!-- Nav -->
 					<nav id="nav">
