--- a/financial-report.html
+++ b/financial-report.html
@@ -30,7 +30,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images\financial-report.PNG" alt="Adventure Works Dashboard"/></span>
+								<span class="image main"><img src="images\financial-report.PNG" alt="Financial Report"/></span>
 								<h2>1. Dataset Summary</h2>
                                     <p>This dataset included company information such as sales order, customers, regions, products, invoices, company expense... from 2015 to 2018.</p>
                                 <h2>2. DIM & FACT tables</h2>
@@ -49,7 +49,7 @@
 										<li>Revenue Insights</li>
 									</ul>
 								<h2>5. Data Model</h2>
-								<img src="images\financial-report-data-model.PNG" alt="Financial Report- Data model" width="100%">
+								<img src="images\financial-report-data-model.PNG" alt="Financial Report - Data model" width="100%">
 
                                 <footer class="major">
 									<ul class="actions special">
