--- a/financial-report.html
+++ b/financial-report.html
@@ -30,7 +30,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/financial-report.png" alt="Financial Report"/></span>
+								<span class="image main"><img src="images/financial-report-1.png" alt="Financial Report"/></span>
 								<h2>1. Dataset Summary</h2>
                                     <p>This dataset included company information such as sales order, customers, regions, products, invoices, company expense... from 2015 to 2018.</p>
                                 <h2>2. DIM & FACT tables</h2>
