--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 		<title>Giang Pham's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 		<!-- google fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400;600;900&display=swap" rel="stylesheet">
 
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -134,25 +134,25 @@
 								
 								<ul class="features">
 									<li>
-										<a href="remote-working-survey.html">
+										<a href="excel-projects/remote-working-survey.html">
 											<img class="imagefix" src="images\remote-work-report-cover.png" alt="Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?" width="100%">
 										</a>
 										<p>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</p>
 									</li>
 									<li>
-										<a href="global-unicorn-landscape.html">
+										<a href="excel-projects/global-unicorn-landscape.html">
 											<img class="imagefix"  src="images\global-unicorn-landscape-cover.png" alt="The global Unicorn landscape" width="100%">
 										</a>
 										<p>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
 									</li>
 									<li>
-										<a href="us-labor-statistics.html">
+										<a href="excel-projects/us-labor-statistics.html">
 											<img class="imagefix"  src="images\wage-employee-by-industry-cover.png" alt="What do wage & employment figures look like by industry?" width="100%">
 										</a>
 										<p>US Labor Statistics - What do wage & employment figures look like by industry?</p>
 									</li>
 									<li>
-										<a href="hotel-group.html">
+										<a href="excel-projects/hotel-group.html">
 											<img class="imagefix"  src="images\hotel-group-cover.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" width="100%">
 										</a>
 										<p>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</p>
@@ -175,19 +175,19 @@
 								</header>
 								<ul class="features">
 									<li>
-										<a href="fuzzy-factory.html">
+										<a href="sql-projects/fuzzy-factory.html">
 											<img  class="imagefix" style="text-decoration: none;" src="images\fuzzy-factory-diagram-cover.png" alt="Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio" width="100%">
 										</a>
 										<p>Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio</p>
 									</li>
 									<li>
-										<a href="120-years-olympic-history.html">
+										<a href="sql-projects/120-years-olympic-history.html">
 											<img class="imagefix"  src="images\olympic-history-cover.png" alt="120 years of Olympic history: athletes and results" width="100%">
 										</a>
 										<p>120 years of Olympic history: athletes and results</p>
 									</li>
 									<li>
-										<a href="student-marks.html">
+										<a href="sql-projects/student-marks.html">
 											<img class="imagefix"  src="images\student-marks-diagram-cover.png" alt="Analyzing student marks" width="100%">
 										</a>
 										<p>Analyzing student marks</p>
@@ -233,19 +233,19 @@
 								</header>
 								<ul class="features">
 									<li>
-										<a href="adventure-works.html">
+										<a href="powerbi-projects/adventure-works.html">
 											<img class="imagefix" style="text-decoration: none;" src="images\adventure-works-dashboard-cover.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 										</a>
 										<p>Adventure Works - Sales & Customer Analysis</p>
 									</li>
 									<li>
-										<a href="human-resources.html">
+										<a href="powerbi-projects/human-resources.html">
 											<img class="imagefix" src="images\human-resources-report.png" alt="Human Resources Report - Overview, Income, and Satisfaction Insights" width="100%">
 										</a>
 										<p>Human Resources Report - Overview, Income, and Satisfaction Insights</p>
 									</li>
 									<li>
-										<a href="financial-report.html">
+										<a href="powerbi-projects/financial-report.html">
 											<img class="imagefix" style="text-decoration: none;" src="images\financial-report-cover.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 										</a>
 										<p>Financial Report - Income Statement, Balance Sheet, Cash Flow, Financial Details, Revenue Insights</p>
@@ -269,7 +269,7 @@
 							</header>
 							<ul class="features">
 								<li>
-									<a href="electric-store.html">
+									<a href="python-projects/electric-store.html">
 										<img class="imagefix" style="text-decoration: none;" src="images\electric-store_sales_analysis.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 									</a>
 									<p>Electric store - Sales analysis</p>
@@ -367,6 +367,8 @@
 						</section>
 						<p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
 					</footer>
+
+					
 
 			</div>
 
