--- a/financial-report.html
+++ b/financial-report.html
@@ -9,10 +9,10 @@
 		<title>Financial Report</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -30,7 +30,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="images/financial-report-1.png" alt="Financial Report"/></span>
+								<span class="image main"><img src="../images/financial-report-1.png" alt="Financial Report"/></span>
 								<h2>1. Dataset Summary</h2>
                                     <p>This dataset included company information such as sales order, customers, regions, products, invoices, company expense... from 2015 to 2018.</p>
                                 <h2>2. DIM & FACT tables</h2>
@@ -49,7 +49,7 @@
 										<li>Revenue Insights</li>
 									</ul>
 								<h2>5. Data Model</h2>
-								<img src="images/financial-report-data-model.png" alt="Financial Report - Data model" width="100%">
+								<img src="../images/financial-report-data-model-2.png" alt="Financial Report - Data model" width="100%">
 
                                 <footer class="major">
 									<ul class="actions special">
