--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<h1>Giang Pham's Portfolio</h1>
 					</header>
 				-->
-					<img src="images/giang-banner.png" alt="Banner">
+					<img src="images/giang-banner-2.png" alt="Banner">
 
 				<!-- Nav -->
 					<nav id="nav">
@@ -107,18 +107,18 @@
 											<div class="column">
 											  <h2>Technical Skills</h2>
 											  <ul>
-												<li>Data tools: Excel, Google Sheets, SQL, Power BI, Python</li>
+												<li>Data tools: Excel, Google Sheets, SQL, Power BI, Basic Python</li>
 												<li>Platforms: Magento, Salesforce, SAP, Haravan, WordPress</li>
-												<li>Web tools: HTML, CSS, UI/UX, Google Analytics</li>
-												<li>Other tools: Trello, Teams, Diagram.net</li>
+												<li>Web tools: HTML, CSS, Google Analytics</li>
+												<li>Other tools: Github, Outlook, Notion, Trello, Teams, Diagram.net</li>
 											  </ul>
 											</div>
 										</p>
 
 										<div style="clear: both; "></div>
-
+										<!--
 										<h2 style="font-weight: 900; font-size: 25pt; text-align: center; margin-top: 30px;">I'm open to work!</h2>
-
+										-->
 									</div>
 									
 								</div>
@@ -129,7 +129,7 @@
 							<section id="excel" class="main special">
 								<header class="major">
 									<h2><span>Excel Projects</span></h2>
-									<h3><b>Skills:</b> Pivot Tables, Power Query, Data Visualization</h3>
+									<h3><b>Skills:</b> Pivot Tables, Power Query, Data Visualization, Storytelling</h3>
 								</header>
 								
 								<ul class="features">
@@ -145,12 +145,14 @@
 										</a>
 										<p>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
 									</li>
+									<!--
 									<li>
 										<a href="excel-projects/us-labor-statistics.html">
 											<img class="imagefix"  src="images\wage-employee-by-industry-cover.png" alt="What do wage & employment figures look like by industry?" width="100%">
 										</a>
 										<p>US Labor Statistics - What do wage & employment figures look like by industry?</p>
 									</li>
+									-->
 									<li>
 										<a href="excel-projects/hotel-group.html">
 											<img class="imagefix"  src="images\hotel-group-cover.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" width="100%">
