--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 												<p>I’m self-study and enjoy working with computers and numbers.</p>
 												<p>My background as a Salesforce Administration and Ecommerce Specialist in the BAYA Furniture & Decoration has given me a deep foundation in working with many systems in data collection, analysis, visualization, and coming up with insights and recommendations. 
 												</p>
-												<p>At first, I use Excel for data analysis, ad-hoc reports,... and Data Studio for shared reports, then I learned to use other tools like MySQL, Power BI, and Python to analyze data more effectively.</p>
+												<p>At first, I used Excel for data analysis, ad-hoc reports,... and Data Studio for shared reports, then I learned to use other tools like MySQL, Power BI, and Python to analyze data more effectively.</p>
 												<ul>
 													<li>LinkedIn: <a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></li>
 													<li>Email: giang.pnt1410@gmail.com</li>
