--- a/powerbi-projects/financial-report.html
+++ b/powerbi-projects/financial-report.html
@@ -36,7 +36,7 @@
                                 <h2>2. DIM & FACT tables</h2>
 									<ul>
 										<li>DIM tables: Calendar, Products, Regions, Customers, Channels</li>
-										<li>FACT tables: Sales, Invoices, Income Statement Data</li>
+										<li>FACT tables: Sales, Invoices, Income Statement Data, Cash Flow Data, Balance Sheet Data</li>
 									</ul>
                                 <h2>3. Tool: Power BI</h2>
 								<h2>4. The brief</h2>
@@ -49,7 +49,7 @@
 										<li>Revenue Insights</li>
 									</ul>
 								<h2>5. Data Model</h2>
-								<img src="../images/financial-report-data-model.png" alt="Financial Report - Data model" width="100%">
+								<img src="../images/financial-report-data-model-2.png" alt="Financial Report - Data model" width="100%">
 
                                 <footer class="major">
 									<ul class="actions special">
