--- a/index.html
+++ b/index.html
@@ -180,19 +180,24 @@
 										<a href="sql-projects/fuzzy-factory.html">
 											<img  class="imagefix" style="text-decoration: none;" src="images\fuzzy-factory-diagram-cover.png" alt="Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio" width="100%">
 										</a>
-										<p>Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio</p>
+										<p>Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio
+										<br/><span class="textbackground">MySQL</span></p>
 									</li>
 									<li>
 										<a href="sql-projects/120-years-olympic-history.html">
 											<img class="imagefix"  src="images\olympic-history-cover.png" alt="120 years of Olympic history: athletes and results" width="100%">
 										</a>
-										<p>120 years of Olympic history: athletes and results</p>
+										<p>120 years of Olympic history: athletes and results
+											<br/><span class="textbackground">PostgreSQL</span> 
+										</p>
 									</li>
 									<li>
 										<a href="sql-projects/student-marks.html">
 											<img class="imagefix"  src="images\student-marks-diagram-cover.png" alt="Analyzing student marks" width="100%">
 										</a>
-										<p>Analyzing student marks</p>
+										<p>Analyzing student marks
+											<br/><span class="textbackground">PostgreSQL</span> 
+										</p>
 									</li>
 								</ul>
 								<!--
