--- a/index.html
+++ b/index.html
@@ -99,18 +99,18 @@
 											  <h2>Summary</h2>
 											  <ul>
 												<li>2 years of working experience in data analysis</li>
-												<li>5 years of cumulative working experience in E-commerce</li>
+												<li>3 years of cumulative working experience in E-commerce</li>
 												<li>Microsoft Certified: Power BI Data Analyst Associate</li>
-												<li>Graduated from the University of Technology in Accounting</li>
+												<!-- <li>Graduated from the University of Technology in Accounting</li> -->
 											  </ul>
 											</div>
 											<div class="column">
 											  <h2>Technical Skills</h2>
 											  <ul>
-												<li>Data tools: Excel, Google Sheets, SQL, Power BI, Basic Python</li>
-												<li>Platforms: Magento, Salesforce, SAP, Haravan, WordPress</li>
-												<li>Web tools: HTML, CSS, Google Analytics</li>
-												<li>Other tools: Github, Outlook, Notion, Trello, Teams, Diagram.net</li>
+												<li>Data tools: Excel, SQL, Power BI, Basic Python</li>
+												<li>Platforms: Magento, Salesforce, SAP</li>
+												<!-- <li>Web tools: HTML, CSS, Google Analytics</li> -->
+												<li>Other tools: Outlook, Notion/Trello, Teams, Diagram.net</li>
 											  </ul>
 											</div>
 										</p>
@@ -158,6 +158,12 @@
 											<img class="imagefix"  src="images\hotel-group-cover.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" width="100%">
 										</a>
 										<p>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</p>
+									</li>
+									<li>
+										<a href="excel-projects/headcount-in-2020.html">
+											<img class="imagefix"  src="images/headcount-2020.png" alt="The global Unicorn landscape" width="100%">
+										</a>
+										<p>How is 2020 headcount?</p>
 									</li>
 								</ul>
 								<!--
