--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
 										</a>
 										<p>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
 									</li>
+									<li>
+										<a href="excel-projects/hiza-logistics-owee-performance.html">
+											<img class="imagefix"  src="images/hiza-logistics.png" alt="Hiza logistics & Owee: Analyzing transport performance" width="100%">
+										</a>
+										<p>Hiza logistics & Owee: Analyzing transport performance</p>
+									</li>
 									<!--
 									<li>
 										<a href="excel-projects/us-labor-statistics.html">
