--- a/excel-projects/hiza-logistics-owee-performance.html
+++ b/excel-projects/hiza-logistics-owee-performance.html
@@ -32,7 +32,7 @@
 								<span class="image main"><img src="../images/hiza-logistics.png" alt="Hiza logistics & Owee: Analyzing transport performance" /></span>
 								<h2>1. Dataset Summary</h2>
                                     <p>Delivery order from week 1 to week 5.</p>
-								<h2>2. Data structure:</h2>
+								<h2>2. Data structure</h2>
 								<p>Multiple tables:</p>
 								<ul>
 									<li>Dropship</li>
