--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Giang Pham's Portfolio</title>
+		<title>Giang Pham's Portfolio - </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -69,7 +69,7 @@
 											</div>
 
 											<div class="column">
-												<p style="font-size: 18pt;">My name is <span style="color:#F26B4E; font-weight: 600;"> Giang Pham</span></p>
+												<p style="font-size: 18pt;">Hi, My name is <span style="color:#F26B4E; font-weight: 600;"> Giang Pham</span></p>
 												<p>I’m self-study and enjoy working with computers and numbers.</p>
 												<p>My background as a Salesforce Administration and Ecommerce Specialist in the BAYA Furniture & Decoration has given me a deep foundation in working with many systems in data collection, analysis, visualization, and coming up with insights and recommendations. 
 												</p>
@@ -340,7 +340,7 @@
 								<ul style="text-align: left;">
 									<li>Open-minded and willing to learn new things</li>
 									<li>Be proactive at work and ability to work under high pressure</li>
-									<li>Ability to self-study, research and understand the English materials</li>
+									<li>Ability to self-study, research and understand the English materials; Basic English (speaking and listening) </li>
 									<li>Able to work independently as well as in a team</li>
 								</ul>
 							</p>
@@ -381,7 +381,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank" class="icon brands fa-linkedin alt"><span class="label">Linkedin</span></a></li>
 								<li><a href="https://giangpham1410.github.io/"target="_blank"  class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<!-- <li><a href="" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li> -->
+								<li><a href="https://medium.com/@giangpham1410" target="_blank" class="icon brands fa-medium alt"><span class="label">Medium</span></a></li>
 							</ul>
 						</section>
 						<p class="copyright">&copy; Source Code: <a href="https://html5up.net">HTML5 UP</a> | Re-design: giangpham1410</p>
