--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 											</div>
 
 											<div class="column">
-												<p style="font-size: 18pt;">Hi, My name is <span style="color:#F26B4E; font-weight: 600;"> Giang Pham</span></p>
+												<p style="font-size: 18pt;">Hi, I am <span style="color:#F26B4E; font-weight: 600;"> Giang Pham</span></p>
 												<p>I’m self-study and enjoy working with computers and numbers.</p>
 												<p>My background as a Salesforce Administration and Ecommerce Specialist in the BAYA Furniture & Decoration has given me a deep foundation in working with many systems in data collection, analysis, visualization, and coming up with insights and recommendations. 
 												</p>
