--- a/index.html
+++ b/index.html
@@ -134,17 +134,26 @@
 								
 								<ul class="features">
 									<li>
+										<a href="excel-projects/plato-pizza.html">
+											<img class="imagefix" src="images/plato-pizza-dashboard.png" alt="Plato Pizza - Sales Dashboard" width="100%">
+										</a>
+										<p>Plato's Pizza - What can we do to improve the pizza store's sales?</p>
+									</li>
+
+									<li>
 										<a href="excel-projects/remote-working-survey.html">
-											<img class="imagefix" src="images\remote-work-report-cover.png" alt="Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?" width="100%">
+											<img class="imagefix" src="images/remote-work-report-cover.png" alt="Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?" width="100%">
 										</a>
 										<p>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</p>
 									</li>
+
 									<li>
 										<a href="excel-projects/global-unicorn-landscape.html">
-											<img class="imagefix"  src="images\global-unicorn-landscape-cover.png" alt="The global Unicorn landscape" width="100%">
+											<img class="imagefix"  src="images/global-unicorn-landscape-cover.png" alt="The global Unicorn landscape" width="100%">
 										</a>
 										<p>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
 									</li>
+
 									<li>
 										<a href="excel-projects/hiza-logistics-owee-performance.html">
 											<img class="imagefix"  src="images/hiza-logistics.png" alt="Hiza logistics & Owee: Analyzing transport performance" width="100%">
@@ -154,7 +163,7 @@
 									<!--
 									<li>
 										<a href="excel-projects/us-labor-statistics.html">
-											<img class="imagefix"  src="images\wage-employee-by-industry-cover.png" alt="What do wage & employment figures look like by industry?" width="100%">
+											<img class="imagefix"  src="images/wage-employee-by-industry-cover.png" alt="What do wage & employment figures look like by industry?" width="100%">
 										</a>
 										<p>US Labor Statistics - What do wage & employment figures look like by industry?</p>
 									</li>
