--- a/powerbi-projects/adventure-works.html
+++ b/powerbi-projects/adventure-works.html
@@ -49,7 +49,7 @@
 
                                 <footer class="major">
 									<ul class="actions special">
-										<li><a href="https://bit.ly/adventure_works_powerbi" class="button" target="_blank">View dashboard</a></li>
+										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiZWZiM2NhZTAtZDcxOS00YmIzLWExZjYtNWExMWZjYTMxZTNlIiwidCI6IjNhZjQwNThjLWEwNzQtNDIwYS05YmFiLWIwMzZjNDk2OWYzZSIsImMiOjEwfQ%3D%3D" class="button" target="_blank">View dashboard</a></li>
 									</ul>
 								</footer>
                             
