--- a/powerbi-projects/financial-report.html
+++ b/powerbi-projects/financial-report.html
@@ -53,7 +53,7 @@
 
                                 <footer class="major">
 									<ul class="actions special">
-										<li><a href="https://bit.ly/financial-report-powerbi" class="button" target="_blank">View dashboard</a></li>
+										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiZDM3YWFkNGUtZTYwZi00NjZlLTg3OTktNDQ2MzYwMTY0YjM4IiwidCI6IjNhZjQwNThjLWEwNzQtNDIwYS05YmFiLWIwMzZjNDk2OWYzZSIsImMiOjEwfQ%3D%3D&pageName=ReportSectione40d89c46a9a538503b3" class="button" target="_blank">View dashboard</a></li>
 									</ul>
 								</footer>
                             
