--- a/powerbi-projects/human-resources.html
+++ b/powerbi-projects/human-resources.html
@@ -41,7 +41,7 @@
 
                                 <footer class="major">
 									<ul class="actions special">
-										<li><a href="https://bit.ly/human-resource-report-powerbi" class="button" target="_blank">View dashboard</a></li>
+										<li><a href="https://app.powerbi.com/view?r=eyJrIjoiOWE3MWM0NTAtOTg1Zi00ZjAzLWI1N2EtMjM4NzMzNGY0NTYyIiwidCI6IjNhZjQwNThjLWEwNzQtNDIwYS05YmFiLWIwMzZjNDk2OWYzZSIsImMiOjEwfQ%3D%3D" class="button" target="_blank">View dashboard</a></li>
 									</ul>
 								</footer>
                             
